k8s/javamelody/javamelody-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: javamelody-collector-server
  name: javamelody-collector-server
  namespace: monitoring
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: javamelody-collector-server
status:
  loadBalancer: {}
