k8s/javamelody/javamelody-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: javamelody-collector-server
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: javamelody.k8s.tools.threeq.com
    http:
      paths:
      - path: /
        backend:
          serviceName: javamelody-collector-server
          servicePort: 8080
